...
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="29dp" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="373dp"
            android:layout_height="17dp"
            android:text="@string/album_lbl_nombre"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="116dp" />
...
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="133dp"
            android:hint="@string/album_lbl_nombre" />


        <TextView
            android:id="@+id/textViewCover"
            android:layout_width="373dp"
            android:layout_height="17dp"
            android:text="@string/album_lbl_cover"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="184dp" />
...
            tools:layout_editor_absoluteX="17dp"
            tools:layout_editor_absoluteY="202dp"
            android:hint="@string/album_lbl_cover" />


        <TextView
            android:id="@+id/textViewReleaseDate"
            android:layout_width="373dp"
            android:layout_height="17dp"
            android:text="@string/album_lbl_release_date"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="17dp"
            tools:layout_editor_absoluteY="261dp" />
...
            android:datePickerMode="spinner"
            tools:layout_editor_absoluteX="17dp"
            tools:layout_editor_absoluteY="278dp" />


        <TextView
            android:id="@+id/textViewGenre"
            android:layout_width="371dp"
            android:layout_height="20dp"
            android:text="@string/album_lbl_genre"
            tools:layout_editor_absoluteX="17dp"
            tools:layout_editor_absoluteY="374dp" />

        <Spinner
            android:id="@+id/spinner_genre"
            android:layout_width="371dp"
            android:layout_height="41dp" />

        <TextView
            android:id="@+id/textViewRecordLabel"
            android:layout_width="367dp"
            android:layout_height="21dp"
            android:text="@string/album_lbl_record_label"
            tools:layout_editor_absoluteX="17dp"
            tools:layout_editor_absoluteY="455dp" />

...
