...
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/albums"
            android:onClick="onClickMenuAlbums" />

        <Button
            android:id="@+id/button_artists_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/artists"
            android:onClick="onClickArtist"/>
    </LinearLayout>
...
